# wabizabi

./: .gitignore  Makefile  README.md  pyproject.toml
docs/wips/: README.md  wip-0001.md  wip-0002.md  wip-0003.md  wip-0004.md  wip-0005.md  wip-0006.md  wip-0007.md  wip-0008.md
examples/_legacy/: capabilities.py  handoffs.py  reasoning.py  schema_output.py  streaming.py  wazi_agent.py
examples/_legacy/incident_response/: __init__.py  agents.py  infra.py  models.py  tools.py
src/wabizabi/: __init__.py
tests/_legacy/: conftest.py
tests/_legacy/wabizabi/: test__init__.py  test_agent.py  test_agent_refactor.py  test_agent_tool.py  test_capabilities.py  test_context.py  test_decorators.py  test_handoff.py  test_history.py  test_hooks.py  test_messages.py  test_output.py  test_output_schema.py  test_processors.py  test_run.py  test_state.py  test_telemetry.py  test_tool_errors.py  test_tools.py  test_toolsets.py  test_usage.py
tests/_legacy/wabizabi/kernel/: test_spike_act_recovery.py  test_spike_collaboration.py  test_spike_provider.py  test_spike_replay.py  test_spike_wazi_boundary.py  test_spike_workflow_replay.py
tests/_legacy/wabizabi/models/: test_base.py
tests/_legacy/wabizabi/providers/: test__init__.py  test_ollama.py  test_ollama_model.py
tests/_legacy/wabizabi/runtime/: test_response_accumulator.py
tests/_legacy/wabizabi/telemetry/: test_otel.py  test_public_import.py
tests/_legacy/wazi/: test__init__.py  test__main__.py  test_app.py  test_commands.py  test_config.py  test_display.py  test_integration.py  test_loader.py  test_session.py
(+3 files in other folders)
