[project]
name = "wabizabi-workspace"
version = "0.1.0"
description = "Workspace for the Wabizabi monorepo."
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "rich>=14.3.3",
    "ruff>=0.15.8",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.workspace]
members = [
  "packages/wabizabi",
  "packages/wazi",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = [
  "packages/wabizabi/src",
  "packages/wazi/src",
  "tests",
  "examples",
]
exclude = [
  "**/__pycache__/",
  ".venv/",
]
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false
reportUnnecessaryTypeIgnoreComment = true
reportMissingModuleSource = false
reportUnusedCallResult = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
markers = [
  "ollama_live: tests that require a local Ollama server",
]

[tool.coverage.run]
branch = true
source = [
  "packages/wabizabi/src/wabizabi",
  "packages/wazi/src/wazi",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
